Color Picker Hue "Jiggles" with Square (SV + H) with Floating Picker Box #37545

Closed
opened 2013-11-20 03:57:31 +01:00 by Josiah Jack · 8 comments

System Information
Windows 7 64bit, AMD 64bit, NVidia GeForce GTX 450

Blender Version
Broken: Blender 2.69 r60995 (official)
Worked: ?

Short description of error
Bug. Hue slider jiggles back and forth when dragging the color around in the picker box near dark colors. Only works for floating color picker boxes (nodes, user preferences window, properties panel->material tab, etc). Seems to be specific to the code handling floating color picker as this isn't reproducible in any tool shelf's embedded picker. This causes the hue to change unexpectedly.

Exact steps for others to reproduce the error

  1. Open Blender.
  2. Open User Preferences.
  3. Go to System tab.
  4. Change Color Picker Type to Square (SV + H)
  5. Click on any color box in the User Preferences window (or a color box on a node in the node editor).
  6. Slide the hue slider to blue-green on the spectrum (or anywhere that isn't in the center of a pure color).
  7. Click in the center of the picker box above and drag the color near the transition to the black band on the left. Drag the slider up and down along the edge of the "black zone" in the box. Notice how the white dot for the hue slider "jiggles" back and forth until it snaps to the nearest pure color.

Please note, the hue slider dot tends to jiggle slightly with any color change, not just areas near black on the left of the box.

**System Information** Windows 7 64bit, AMD 64bit, NVidia GeForce GTX 450 **Blender Version** Broken: Blender 2.69 r60995 (official) Worked: ? **Short description of error** Bug. Hue slider jiggles back and forth when dragging the color around in the picker box near dark colors. Only works for floating color picker boxes (nodes, user preferences window, properties panel->material tab, etc). Seems to be specific to the code handling floating color picker as this isn't reproducible in any tool shelf's embedded picker. This causes the hue to change unexpectedly. **Exact steps for others to reproduce the error** 1. Open Blender. 2. Open User Preferences. 3. Go to System tab. 4. Change Color Picker Type to Square (SV + H) 5. Click on any color box in the User Preferences window (or a color box on a node in the node editor). 6. Slide the hue slider to blue-green on the spectrum (or anywhere that isn't in the center of a pure color). 7. Click in the center of the picker box above and drag the color near the transition to the black band on the left. Drag the slider up and down along the edge of the "black zone" in the box. Notice how the white dot for the hue slider "jiggles" back and forth until it snaps to the nearest pure color. Please note, the hue slider dot tends to jiggle slightly with any color change, not just areas near black on the left of the box.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @WilliamJack

Added subscriber: @WilliamJack
Author

Oops. Doesn't really belong in this project. Didn't see the rules before. Please move this where it needs to be, I can't edit it now. Where do UI bugs go anyways?

Oops. Doesn't really belong in this project. Didn't see the rules before. Please move this where it needs to be, I can't edit it now. Where do UI bugs go anyways?
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne

This issue was referenced by blender/blender-addons-contrib@25560a3734

This issue was referenced by blender/blender-addons-contrib@25560a3734a18657518652366fe24ce4574d54ff

This issue was referenced by 25560a3734

This issue was referenced by 25560a3734a18657518652366fe24ce4574d54ff
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 25560a3734.

Closed by commit 25560a3734.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37545
No description provided.