Fix T37545: SV+H color cube display changes H slider position when modifying S or V.

The widget for the SV gradient was disabling display colorspace transform, but this was not happening for the H slider below, leading to varying H values used to calculate the slider position.